cmake_minimum_required(VERSION 3.2)

project(ImGui LANGUAGES CXX)

add_library(ImGui STATIC
    imgui.cpp
    imgui_draw.cpp
    imgui_tables.cpp
    imgui_widgets.cpp
    imgui_demo.cpp
    imgui.h
    imgui_internal.h
    imconfig.h

    imstb_rectpack.h
    imstb_textedit.h
    imstb_truetype.h
)

